deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-gif-generator
  namespace: cat-gif-generator
spec:
  selector:
    app: cat-gif-generator
  ports:
    - name: http
      port: 80
      targetPort: 5001
