deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cat-gif-generator
  namespace: cat-gif-generator
spec:
  to:
    kind: Service
    name: cat-gif-generator
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
